openshift/alt-deployment-configs/snapshot-mgr/snapmgr-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: verifyaccess-snapmgr
  labels:
    app: verifyaccess
spec:
  host: snapmgr.iamlab.ibm.com
  port:
    targetPort: snapmgr
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: isvasnapmgr
    weight: 100
  wildcardPolicy: None
